2000-05-18  Alan Modra  <alan@linuxcare.com.au>

	* libhppa.h (re_assemble_3, re_assemble_12, re_assemble_16,
	re_assemble_17, re_assemble_21, re_assemble_22): Don't mask insn.
	(hppa_rebuild_insn): Mask immediate bits here instead.
	* elf-hppa.h (elf_hppa_relocate_insn): Mask here too.

2000-05-18  Momchil Velikov <velco@fadata.bg>

	* elflink.h (elf_bfd_final_link, elf_link_input_bfd): When emiting
	relocs for an executable, ensure that they are virtual addresses.

Thu May 18 10:55:47 2000  Jeffrey A Law  (law@cygnus.com)

	* config.bfd (hppa*64*-*-hpux11*): New target triplet.

2000-05-17  S. Bharadwaj Yadavalli  <sby@scrugs.lkg.dec.com>
	    Rick Gorton	            <gorton@scrugs.lkg.dec.com>
	
	* elflink.h: Add emitrelocations support: when enabled, relocation 
	information and relocation sections are put into final output
	executables.  If the emitrelocations flag is set, do the following:
	(elf_bfd_final_link): Emit relocation sections.
	(elf_link_input_bfd): Compute relocation section contents.
	(elf_gc_sections): Don't clean relocation sections.

2000-05-16  Catherine Moore  <clm@cygnux.com>

	* som.c (som_decode_symclass):  Recognize weak symbols.

2000-05-16  Szabolcs Szakacsits <szaka@F-Secure.com>

	* peigen.c (pe_print_idata): Undo part of 2000-05-12 change that
	read idata section only from dataoff.
	(pe_print_edata): Correctly check for valid eat_member.

Tue May 16 00:04:11 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* elf32-sh.c (sh_elf_relax_delete_bytes): Handle R_SH_SWITCH8.

2000-05-14  Philip Blundell  <philb@gnu.org>

	* config.bfd (armeb-*-elf, arm*b-*-linux-gnu*): New targets.

2000-05-12  Alan Modra  <alan@linuxcare.com.au>

	* targets.c (bfd_target_vector): #ifdef BFD64 rs6000coff64_vec

	* peigen.c (pe_print_idata): Look for .idata section and print
	info even if data directory has zero entries.  Read idata section
	starting from dataoff, and adjust all data offsets to suit.  Cast